[project]
name = "ae-dungeon"
version = "0.1.0"
description = "Anime Eternal macro for hourly dungeons"
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mss>=10.1.0",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "pydirectinput-rgx>=2.1.3",
    "pynput>=1.8.1",
    "pytesseract>=0.3.13",
    "rich>=14.2.0",
]
